plugins {
    id 'application'
    id 'eclipse'
    id 'com.diffplug.eclipse.apt'
    id 'com.google.cloud.tools.jib' version '2.6.0'
}

mainClassName = 'io.netlibs.ami.pump.Main'


jib {
  from {
    // or open9...
    image = 'adoptopenjdk:11-jre-hotspot' 
  }
  container {
    jvmFlags = [ '--illegal-access=permit', '--add-exports', 'java.base/jdk.internal.ref=ALL-UNNAMED' ]
    format = 'Docker'
  }
  to {
    auth {
      username = System.getenv('GITHUB_ACTOR')
      password = System.getenv('GITHUB_TOKEN')
    }
  }
}


apply from: "${rootDir}/gradle/eclipse.gradle"

repositories {
  jcenter()
  
}

eclipse.jdt.sourceCompatibility = 11
eclipse.jdt.targetCompatibility = 11

application {
  applicationDefaultJvmArgs = ['--illegal-access=permit', '--add-exports', 'java.base/jdk.internal.ref=ALL-UNNAMED']
}

dependencies {
 
  implementation platform('io.netty:netty-bom:4.1.77.Final')
  implementation platform('software.amazon.awssdk:bom:2.17.206')
  implementation platform('com.fasterxml.jackson:jackson-bom:2.13.3')
  implementation platform('io.micrometer:micrometer-bom:1.6.1')

  annotationProcessor 'org.immutables:value:2.9.0'
  compileOnly 'org.immutables:value-annotations:2.9.0'
  
  // implementation platform('io.github.resilience4j:resilience4j-bom:1.6.1')
  // implementation 'io.github.resilience4j:resilience4j-retry'
  // implementation 'io.github.resilience4j:resilience4j-ratelimiter'
  
  implementation 'software.amazon.awssdk:auth'
  implementation 'software.amazon.awssdk:sts'
  implementation 'software.amazon.awssdk:sns'
  implementation 'software.amazon.awssdk:kinesis'
  implementation 'software.amazon.awssdk:netty-nio-client'
  implementation 'software.amazon.kinesis:amazon-kinesis-client:2.3.1'
  implementation 'info.picocli:picocli:4.5.2'  
  implementation ('net.openhft:chronicle-queue:5.20.110') {
    exclude group: 'net.openhft', module: 'affinity'
  }
  
  //runtimeOnly 'net.openhft:affinity:3.20.0'
  
}

dependencies {
  implementation 'org.ini4j:ini4j:0.5.4'
  implementation 'com.fasterxml.jackson.core:jackson-annotations'
  implementation 'com.fasterxml.jackson.core:jackson-databind'
  implementation 'com.fasterxml.jackson.module:jackson-module-parameter-names'
  implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
  implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jdk8'
  implementation 'com.fasterxml.jackson.datatype:jackson-datatype-guava'
}

dependencies {
  implementation project(':client')
  implementation 'com.google.guava:guava:31.1-jre'  
  implementation 'org.slf4j:slf4j-api:1.7.36'
  implementation 'io.micrometer:micrometer-core'
  implementation 'io.micrometer:micrometer-registry-statsd'
  runtimeOnly 'org.slf4j:slf4j-simple:1.7.36'  
}

dependencies {
  testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
  testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
}


